Revision history

0.0001_01   2018-07-08
    - Remove MooseX::HasDefaults::RO as dependency.

0.0001      2018-04-18
    - First release.
